# things

./: .air.toml  .bazelrc  .cz.toml  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.md  MODULE.bazel  Makefile  README.md  bazel  common.mk  gazelle_python.yaml  go.mod  go.sum  go.work  packages-os.txt  packages-pipx.txt  pyproject.toml  repos.bzl  requirements.txt
cmd/leetcode/: BUILD.bazel  main.go
cmd/versioning/: BUILD.bazel  main.go
dotfiles/: BUILD.bazel  MODULE.bazel  Makefile  pyproject.toml
dotfiles/os/: Makefile
dotfiles/scripts/: defs.bzl  install
dotfiles/ssh/: README.md
dotfiles/terraform/: .terraformrc.hcl
dotfiles/tools/: defs.bzl  embed  install  scripts
dotfiles/udev/: vial-ergohaven-k-02.vil
dotfiles/vscode/: Makefile
leetcode/: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  go.mod  main.go  pyproject.toml  submissions.json
leetcode/cmd/: BUILD.bazel  cmd.go  main.go
leetcode/core/: BUILD.bazel  downloader.go  generator.go  repo.go  submissions_downloader.go  submissions_repo.go
leetcode/model/: BUILD.bazel  config.json  defaults.go  submission.txt.tmpl  types.proto
leetcode/scripts/: download  generate  parse  update
leetcode/shishifubing/leetcode/: __init__.py  format  main.py  submissions_downloader.py  submissions_generator.py  submissions_repo.py  types.py
leetcode/submissions/: 00001-1096529439-two-sum.cpp  00001-689996230-two-sum.go  00001-692799105-two-sum.go  00001-955691548-two-sum.py  00001-955694370-two-sum.py  00001-995274303-two-sum.py  00001-two-sum-1096529439.cpp  00001-two-sum-689996230.go  00001-two-sum-692799105.go  00001-two-sum-955691548.py  00001-two-sum-955694370.py  00001-two-sum-995274303.py  00002-689836294-add-two-numbers.go  00002-987984788-add-two-numbers.py  00002-997697463-add-two-numbers.py  00002-add-two-numbers-689836294.go  00002-add-two-numbers-987984788.py  00002-add-two-numbers-997697463.py  00003-1002878172-longest-substring-without-repeating-characters.py  00003-1002890033-longest-substring-without-repeating-characters.py  00003-1057811004-longest-substring-without-repeating-characters.py  00003-longest-substring-without-repeating-characters-1002878172.py  00003-longest-substring-without-repeating-characters-1002890033.py  00003-longest-substring-without-repeating-characters-1057811004.py  00004-1055193922-median-of-two-sorted-arrays.py  00004-1057807413-median-of-two-sorted-arrays.py  00004-median-of-two-sorted-arrays-1055193922.py  00004-median-of-two-sorted-arrays-1057807413.py  00005-1008545747-longest-palindromic-substring.py  00005-1016005646-longest-palindromic-substring.py  00005-1085421868-longest-palindromic-substring.py  00005-longest-palindromic-substring-1008545747.py  00005-longest-palindromic-substring-1016005646.py  00005-longest-palindromic-substring-1085421868.py  00006-998330017-zigzag-conversion.py  00006-zigzag-conversion-998330017.py  00009-690057830-palindrome-number.go  00009-956331143-palindrome-number.py  00009-997657948-palindrome-number.py  00009-997659017-palindrome-number.py  (+2951 more)
leetcode/tools/: submissions  update
pkg/dotfiles/: BUILD.bazel  galaxy_requirements.yml
pkg/dotfiles/os/: playbook_server.yml
pkg/dotfiles/ssh/: Makefile  playbook_server.yml
pkg/dotfiles/tools/: install  scripts
pkg/dotfiles/udev/: 99-custom.rules  Makefile  README.md  vial-ergohaven-k-03.vil
pkg/gitlab_pipeline_generator/: BUILD.bazel  __init__.py  main.py  main_test.py  schema.json  types.py
pkg/leetcode/: BUILD.bazel  README.md  downloader.go  generator.go  main.go  repo.go
pkg/leetcode/model/: BUILD.bazel  main.go  submission.txt.tmpl  types.proto
pkg/tianyi/cmd/: BUILD.bazel  database_cmd.go  server_cmd.go
pkg/tianyi/docs/: BUILD.bazel  swagger.json
pkg/tianyi/entity/: BUILD.bazel
pkg/tianyi/infrastructure/: BUILD.bazel  app_infrastructure.go
pkg/tianyi/pkg/: BUILD.bazel
pkg/tianyi/usecase/: BUILD.bazel  app_usecase.go
pkg/versioning/: BUILD.bazel  main.go  main_test.go
tianyi/: .air.toml  BUILD.bazel  CHANGELOG.md  go.mod  go.sum  main.go
tianyi/.github/: dependabot.yml
tianyi/.tianyi/: config.hcl
tianyi/api/: BUILD.bazel
tianyi/api/controller/: BUILD.bazel  pipelines_controller.go  session_controller.go
tianyi/api/middleware/: BUILD.bazel
tianyi/api/presenter/: BUILD.bazel  common_presenter.go  lifecycle_presenter.go  pipeline_presenter.go  project_presenter.go
tianyi/cmd/: BUILD.bazel
tianyi/docs/: BUILD.bazel
tianyi/docs/diagrams/: app-web-tianyi.drawio
tianyi/entity/: BUILD.bazel
tianyi/infrastructure/: BUILD.bazel  app_infrastructure.go
tianyi/infrastructure/access/: BUILD.bazel
tianyi/infrastructure/branch/: BUILD.bazel
tianyi/infrastructure/config/: BUILD.bazel
tianyi/infrastructure/job/: BUILD.bazel  job_infrastructure.go
tianyi/infrastructure/jwt/: BUILD.bazel
tianyi/infrastructure/lifecycle/: BUILD.bazel  router_infrastructure.go
tianyi/infrastructure/pipeline/: BUILD.bazel  pipeline_infrastructure.go
tianyi/infrastructure/pool/: BUILD.bazel  pool_infrastructure.go
tianyi/infrastructure/project/: BUILD.bazel  project_infrastructure.go
tianyi/infrastructure/schedule/: BUILD.bazel  schedule_infrastructure.go
tianyi/infrastructure/session/: BUILD.bazel
tianyi/infrastructure/user/: BUILD.bazel  user_infrastructure.go
tianyi/pkg/: BUILD.bazel
tianyi/pkg/error/: BUILD.bazel
tianyi/usecase/: BUILD.bazel
tianyi/usecase/access/: BUILD.bazel
tianyi/usecase/branch/: BUILD.bazel  branch_interactor.go  branch_interface.go
tianyi/web/: BUILD.bazel  package.json
tmux/: Makefile  README.md  playbook_tmux.yml  pyproject.toml
tools/: BUILD.bazel  MODULE.bazel  Makefile  bazel  env.sh  get_packages  gopackagesdriver  leetcode  tools  update_readme  usage.sh
tools/bump_version/: BUILD.bazel  README.md
tools/check_pr_changes/: BUILD.bazel  README.md  check_pr_changes.py
tools/kaniko/: action.yml
tools/release/: BUILD.bazel  template.md.j2
tools/versioning/: BUILD.bazel  main.go  main_test.go
versioning/: BUILD.bazel  MODULE.bazel  main.go
versioning/bump/: Dockerfile
(+945 files in other folders)
