load("@rules_license//rules:license.bzl", "license")
load("@gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    command = "fix",
)

# this export is needed to run git scripts
exports_files([".git"])

#load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
#buildifier(
#    name = "buildifier",
#    lint_mode = "fix",
#    lint_warnings = ["all"],
#)

package(
    default_applicable_licenses = [":license"],
    default_visibility = ["//visibility:private"],
)

license(
    name = "license",
    license_kinds = [
        "@rules_license//licenses/spdx:AGPL-3.0",
    ],
    license_text = "LICENSE",
)
