module(
    name = "stuff",
    #repo_name = "stuff",
    version = "0.72.0",
)

# https://github.com/bazelbuild/rules_pkg/releases/
bazel_dep(name = "rules_pkg", version = "0.9.1")

# https://github.com/bazelbuild/rules_license/releases/
bazel_dep(name = "rules_license", version = "0.0.8")

# https://github.com/bazelbuild/rules_python/releases/
bazel_dep(name = "rules_python", version = "0.29.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.29.0")

# https://github.com/bazelbuild/bazel-gazelle/releases/
bazel_dep(name = "gazelle", version = "0.35.0")

# https://github.com/bazelbuild/rules_go/releases/
bazel_dep(name = "rules_go", version = "0.46.0")

# https://github.com/bazelbuild/bazel-skylib/releases/tag/
bazel_dep(name = "bazel_skylib", version = "1.5.0")

# dev dependencies

# https://github.com/bazelbuild/stardoc/releases/
bazel_dep(name = "stardoc", version = "0.6.2", dev_dependency = True, repo_name = "io_bazel_stardoc")

# setup python
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.9",
)
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.10",
)
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.11",
)
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.12",
)
use_repo(python, "python_versions")

# setup go
# https://github.com/bazelbuild/rules_go/blob/master/docs/go/core/bzlmod.md
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.6")
go_sdk.host()
