module(
    name = "things",
    version = "0.72.0",
    compatibility_level = 1,
)

# https://github.com/bazelbuild/rules_pkg/releases/
bazel_dep(name = "rules_pkg", version = "0.9.1")

# https://github.com/bazelbuild/rules_license/releases/
bazel_dep(name = "rules_license", version = "0.0.8")

# https://github.com/bazelbuild/rules_python/releases/
bazel_dep(name = "rules_python", version = "0.29.0")
bazel_dep(name = "rules_python_gazelle_plugin", version = "0.29.0")

# https://github.com/aspect-build/rules_py/releases/
bazel_dep(name = "aspect_rules_py", version = "0.7.1")

# https://github.com/bazelbuild/bazel-gazelle/releases/
bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")

# https://github.com/bazelbuild/rules_go/releases/
bazel_dep(name = "rules_go", version = "0.46.0", repo_name = "io_bazel_rules_go")

# https://github.com/bazelbuild/bazel-skylib/releases/
bazel_dep(name = "bazel_skylib", version = "1.5.0")

# dev dependencies

# https://github.com/bazelbuild/stardoc/releases/
bazel_dep(name = "stardoc", version = "0.6.2", dev_dependency = True, repo_name = "io_bazel_stardoc")

# setup python
# https://github.com/bazelbuild/rules_python/tree/main/examples/bzlmod_build_file_generation
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
    is_default = True,
    configure_coverage_tool = True,
)
python.toolchain(
    python_version = "3.11",
    configure_coverage_tool = True,
)
python.toolchain(
    python_version = "3.10",
    configure_coverage_tool = True,
)
python.toolchain(
    python_version = "3.9",
    configure_coverage_tool = True,
)
use_repo(python, python = "python_versions")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//build/requirements:requirements_lock_3_12.txt",
    requirements_windows = "//build/requirements:requirements_lock_3_12_windows.txt",
)
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//build/requirements:requirements_lock_3_11.txt",
    requirements_windows = "//build/requirements:requirements_lock_3_11_windows.txt",
)
pip.parse(
    hub_name = "pip",
    python_version = "3.10",
    requirements_lock = "//build/requirements:requirements_lock_3_10.txt",
    requirements_windows = "//build/requirements:requirements_lock_3_10_windows.txt",
)
pip.parse(
    hub_name = "pip",
    python_version = "3.9",
    requirements_lock = "//build/requirements:requirements_lock_3_9.txt",
    requirements_windows = "//build/requirements:requirements_lock_3_9_windows.txt",
)
use_repo(pip, "pip")

# setup go
# https://github.com/bazelbuild/rules_go/blob/master/docs/go/core/bzlmod.md
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.module_override(
    # fix for https://github.com/bazelbuild/bazel-gazelle/issues/1421
    path = "github.com/cloudflare/circl",
    patch_strip = 1,
    patches = ["//third_party/go/com_github_cloudflare_circl:0001-fix-cgo.patch"],
)
use_repo(go_deps, "com_github_casbin_casbin_v2", "com_github_casbin_gorm_adapter_v3", "com_github_go_git_go_billy_v5", "com_github_go_git_go_git_v5", "com_github_go_playground_validator_v10", "com_github_go_redis_redis_v8", "com_github_gocraft_work", "com_github_gofiber_fiber_v2", "com_github_gofiber_jwt_v3", "com_github_gofiber_storage_redis", "com_github_golang_jwt_jwt_v4", "com_github_gomodule_redigo", "com_github_google_uuid", "com_github_hashicorp_hcl_v2", "com_github_mitchellh_mapstructure", "com_github_spf13_cobra", "com_github_spf13_viper", "com_github_swaggo_swag", "io_gorm_driver_postgres", "io_gorm_gorm", "org_golang_x_crypto", "org_golang_x_mod")
