load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

filegroup(
    name = "packages",
    srcs = glob([
        "shell/**",
        "tmux/**",
        "terraform/**",
        "bin/**",
        "nvim/**",
        "gpg/**",
        "git/**",
        "firefox/**",
    ]),
)

pkg_tar(
    name = "pack",
    srcs = [":packages"],
    extension = "tar.gz",
    strip_prefix = ".",  # if ommited, pkg_tar flattens paths
)

sh_library(name = "lib_embed", srcs = ["tools/embed"])
sh_library(name = "lib_install", srcs = ["tools/install"])

genrule(
    name = "gen_install_script",
    tools = [":pack", ":lib_install"],
    srcs = [":lib_embed"],
    outs = ["install_script"],
    cmd = "'$(<)' '$(@)' '$(location :pack)' '$(location :lib_install)'",
)

sh_binary(
    name = "install",
    srcs = [":install_script"],
    args = ["--stow"],
)

sh_binary(
    name = "simulate",
    srcs = [":install_script"],
    args = ["--simulate"],
)

sh_binary(
    name = "delete",
    srcs = [":install_script"],
    args = ["--delete"],
)
