[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "dotfiles"
authors = ["q1feq3qzi60u <97828377+q1feq3qzi60u@users.noreply.github.com>"]
license = "AGPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^9.1.0"
selinux = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pipx = "^1.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
