load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_skylib//lib:paths.bzl", "paths")

# gazelle:prefix shishifubing.com/leetcode

sh_binary(name = "update", srcs = ["tools/update"])

go_library(
    name = "leetcode_lib",
    srcs = ["main.go"],
    importpath = "shishifubing.com/leetcode",
    visibility = ["//visibility:private"],
    deps = ["//leetcode/cmd"],
)

go_binary(
    name = "leetcode",
    args = [
        "--submissions-file",
        "$(location submissions.json)",
    ],
    data = ["submissions.json"],
    embed = [":leetcode_lib"],
    visibility = ["//visibility:public"],
)
