load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_skylib//lib:paths.bzl", "paths")

# gazelle:exclude submissions
sh_binary(
    name = "update",
    srcs = ["tools/submissions"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "generate",
    srcs = ["tools/submissions"],
    args = ["generate_submission_dir"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "leetcode_lib",
    srcs = ["main.go"],
    importpath = "shishifubing.com/leetcode",
    visibility = ["//visibility:private"],
    deps = ["//leetcode/cmd"],
)

go_binary(
    name = "leetcode",
    embed = [":leetcode_lib"],
    visibility = ["//visibility:public"],
)
