[tool.poetry]
name = "tmux"
version = "0.1.0"
description = "tmux config"
authors = ["q1feq3qzi60u <97828377+q1feq3qzi60u@users.noreply.github.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
