sh_binary(
    name = "leetcode_update",
    srcs = ["leetcode"],
    args = [
        "$(location //cmd/leetcode)",
        "update",
    ],
    data = [
        "//cmd/leetcode",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "leetcode_generate",
    srcs = ["leetcode"],
    args = [
        "$(location //cmd/leetcode)",
        "generate_submission_dir",
    ],
    data = [
        "//cmd/leetcode",
    ],
    visibility = ["//visibility:public"],
)
