sh_binary(
    name = "run_leetcode",
    srcs = ["leetcode"],
    args = [
        "$(location //cmd/leetcode)",
    ],
    data = [
        "//cmd/leetcode",
    ],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "run_leetcode_update",
    srcs = ["run_leetcode"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "run_leetcode_generate",
    srcs = ["run_leetcode"],
    visibility = ["//visibility:public"],
)
