load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "leetcode_lib",
    srcs = ["main.go"],
    importpath = "shishifubing.com/cmd/leetcode",
    visibility = ["//visibility:private"],
    deps = ["//pkg/leetcode"],
)

go_binary(
    name = "leetcode",
    embed = [":leetcode_lib"],
    visibility = ["//visibility:public"],
)
