load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "versioning_lib",
    srcs = ["main.go"],
    importpath = "shishifubing.com/cmd/versioning",
    visibility = ["//visibility:private"],
    deps = ["//pkg/versioning:versioning_lib"],
)

go_binary(
    name = "versioning",
    embed = [":versioning_lib"],
    visibility = ["//visibility:public"],
)
