load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "versioning_lib",
    srcs = ["main.go"],
    importpath = "shishifubing.com/cmd/versioning",
    visibility = ["//visibility:private"],
    deps = ["//pkg/versioning"],
)

go_binary(
    name = "versioning",
    embed = [":versioning_lib"],
    visibility = ["//visibility:public"],
)
